Document all auth routes to swagger
